# flexsim-mcp

./: 3D 库对象概述 --- Overview of 3D Library Objects.html  CLAUDE.md  FlexScript 接口 --- FlexScript Interfaces.html  README.md  config.toml  create_executor_model.py  pyproject.toml  requirements.txt  start_mcp.bat  verify_stage1.py  代码编辑器 --- Code Editor.html  任务执行器如何处理任务 --- How Task Executers Handle Tasks.html  固定资源概念 --- Fixed Resources Concepts.html  在 FlexSim 中编写逻辑 --- Writing Logic in FlexSim.html  模块 SDK 快速入门 --- Module SDK Quick Start.html  脚本控制台 --- Script Console.html
3D 库对象概述 --- Overview of 3D Library Objects_files/: 12.45e656039b3fa23613e1.chunk.js.下载  16000256  16000256.js.下载  274998069370181  37.f07adfd0005923b508c9.chunk.js.下载  FlexsimHelpStandard.css  activityi.html  autodesk.jsp  css2  js  js(1)  prism.css  prism.js.下载  saved_resource  saved_resource(1)  saved_resource(2)  tag.js.下载  utag.1142.js.下载  utag.1179.js.下载  utag.12.js.下载  utag.13.js.下载  utag.1741.js.下载  utag.1808.js.下载  utag.1836.js.下载  utag.2021.js.下载  utag.2066.js.下载  utag.2067.js.下载  utag.2068.js.下载  utag.2105.js.下载  utag.2118.js.下载  utag.412.js.下载  utag.98.js.下载  utag.js.下载  utag.tagsOptOut.js.下载  wads.html
docs/: executor-fsm-guide.md  阶段1进度交接.md  阶段2进度交接.md  项目计划大纲.md
mcp_server/: errors.py  flexsim_builder.py  flexsim_client.py  model_spec.py  server.py  session.py  tools.py  translator.py
scripts/: smoke_eval.py
scripts/ralph/: prd.json  progress.txt
