[project]
name = "flexsim-mcp"
version = "0.1.0"
description = "MCP server for controlling FlexSim simulation"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
